<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/age_input"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="232dp"
        android:text="Generate History"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="56dp"
        android:autofillHints=""
        android:hint="Enter age"
        android:inputType="number"
        android:textColorHint="#F8F9FA"
        app:layout_constraintBottom_toTopOf="@+id/generate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/generate_button"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="24dp"
        android:text="Clear"
        app:layout_constraintBottom_toTopOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/generate_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <EditText
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="159dp"
        android:layout_below="@id/clear_button"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="The History App"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/age_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

</androidx.constraintlayout.widget.ConstraintLayout>